# algol-reduction

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  conf.py  index.rst  make.bat  requirement.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
data/: Algol_2018_02_24_01_vspec-noh2o.fit  Alpha_Per-noh2o.fit  Regulus_2018_04_21_01_180s-noh2o.fit  Regulus_2018_04_21_02_180s-noh2o.fit  Regulus_2018_04_21_03_180s-noh2o.fit  Regulus_2018_04_21_04_180s-noh2o.fit  Regulus_2018_04_21_05_180s-noh2o.fit  Regulus_Sigma_dark-noh2o.fit  Wega_2017_07_21_01-noh2o-norm.fit  Wega_2017_07_21_01-noh2o.fit  Wega_2017_07_21_01_vspec-noh2o.fit  Wega_2017_07_21_02-noh2o.fit  Wega_2017_07_21_03-noh2o.fit  Wega_2017_07_21_04-noh2o.fit  Wega_2017_07_21_05-noh2o.fit  broken_obs_time.fit  delCep-2019-12-05_04-noh2o-norm.fit  voigt_args_delCep.txt
data/BetaCepheiPaula/: 191204bet-01-noh2o.fit  191204bet-03-noh2o.fit  191204bet-04-noh2o.fit  CONV_R28_L6562.81_W100._S-8.2_C_s29180g4.02z0.0t5.0_a0.00c-0.06n0.18o-0.01_Mdot-8.79Vinfty2805beta1.0finfty1.0vcl0_VIS.spec  Makefile  betCep001-noh2o.fit  betCep002-noh2o.fit  betCep003-noh2o.fit  betCep004-noh2o.fit  betCep005-noh2o.fit  betCep006-noh2o.fit  betCep007-noh2o.fit  betCep008-noh2o.fit  betCep009-noh2o.fit  betCep010-noh2o.fit  betCep011-noh2o.fit  betCep012-noh2o.fit  betCep013-noh2o.fit  betCep014-noh2o.fit  betCep015-noh2o.fit  norm_betCep.args  phase_betCep.args  voigt_betCep.args
data/DeltaCepheiPaula/: CONV_R9_L6562_W200._S-16.8_M_s5750g1.0z-0.50t2.0_a-0.20c0.00n0.00o0.00r0.00s0.00_VIS.spec  Makefile  delCep0001-noh2o.fit  delCep0002-noh2o.fit  delCep0003-noh2o.fit  delCep0004-noh2o.fit  delCep0008-noh2o.fit  delCep0009-noh2o.fit  delCep0010-noh2o.fit  delCep0011-noh2o.fit  delCep0012-noh2o.fit  delCep0013-noh2o.fit  delCep0014-noh2o.fit  delCep0015-noh2o.fit  delCep0016-noh2o.fit  delCep0017-noh2o.fit  delCep0019-noh2o.fit  delCep0020-noh2o.fit  delCep0021-noh2o.fit  delCep0022-noh2o.fit  delCep0023-noh2o.fit  delCep0024-noh2o.fit  delCep0025-noh2o.fit  delCep0026-noh2o.fit  delCep0027-noh2o.fit  delCep0028-noh2o.fit  delCep0029-noh2o.fit  delCep005-noh2o.fit  delCep006-noh2o.fit  delCep007-noh2o.fit  delCep20191031-1-noh2o.fit  delCep20191031-2-noh2o.fit  delCep20191031-3-noh2o.fit  delCep30-noh2o.fit  delCep31-noh2o.fit  delCep32-noh2o.fit  delCep33-noh2o.fit  delCep34-noh2o.fit  norm_delCep.args  phase_delCep.args  (+1 more)
data/synth/: CONV_R9._L4861_W500._M_s5500g1.5z0.0t1.0_a0.00c0.00n0.00o0.00r0.00s0.00_VIS.spec  (+16 more)
doc/: .gitignore  MizarOribitalVelocity.html  MizarOribitalVelocity.ipynb  install_whl.md  reduction.gv  reduction.tex
reduction/: algol_h_alpha_line_model.py  commandline.py  fittable_spectrum.py  instrument.py  linearinterpolation.py  nan_statistics.py  normalize.py  observers.py  plot_radial_velocity.py  plotting.py  spectrum.py  spectrum_13000.0_4.0_0.3_1.07.fit
(+41 files in other folders)
