[metadata]
name = reduction
version = 1.0.0a2
description = "Spectral reduction package"
long_description = file: index.rst
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
scripts =
  bin/display_fits_1d.py
  bin/extract_continuum_ranges.py
  bin/normalize_h_alpha.py
  bin/normalize_spectrum.py

[options.package_data]
## does not work, I had to add MANIFEST.in
# * = *.txt, *.fit
# hello = *.msg

[options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
# exclude =
#     src.subpackage1
#     src.subpackage2
