[metadata]
name = algol_reduction
version = 2025.4.0
author = Christian W. Brock
description = Spectral reduction package
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers = 
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.5
install_requires =
    matplotlib
    numpy
    scipy>=1.6
    astropy>=3.2.2
    astroplan>=0.6
    icalendar

# [options.packages.find]
# exclude = test, *.test, *.test.*

[options.extras_require]
test =
	flake8
	pytest

[options.entry_points]
console_scripts =
    fits_display1d = reduction.scripts.display_fits_1d:main
    fits_display2d = reduction.scripts.display_fits_2d:main
    fits_setval = reduction.scripts.fitssetval:main
    fits_timeline = reduction.scripts.fits_timeline:main
    helio = reduction.scripts.helio:main
    normalize_spectrum = reduction.scripts.normalize_spectrum:main
    plan_observations = reduction.scripts.plan_observations:main
    generate_report = reduction.scripts.generate_report:main
    fit_three_voigts = reduction.utils.fit_h_alpha:main
    display_voigt_fit = reduction.utils.display_h_alpha:main

